[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
pgtemp = "0.5.0"
rustls = "0.23.14"
rustls-pemfile = "2.2.0"
rustls-pki-types = "1.10.0"
webpki-roots = "0.26.6"
tokio-postgres-rustls = "0.12.0"
tokio-postgres = { version = "0.7.12", features = ["with-serde_json-1", "with-chrono-0_4"] }
anyhow = "1.0.86"
axum = { version = "0.7.5", features = ["ws"] }
chrono = "0.4.38"
clap = { version = "4.5.13", features = ["derive"] }
env_logger = "0.11.3"
futures = "0.3.30"
http-serde = "2.1.1"
rusqlite = { version = "0.31.0", features = ["bundled", "serde_json"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
serde_yaml = "0.9"
tempfile = "3.12.0"
tokio = { version = "1.38.0", features = ["rt-multi-thread", "signal"] }
tokio-util = { version = "0.7.11", features = ["io", "io-util"] }
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = "0.1.40"
zstd = "0.13.2"
rand = "0.8.5"
